/*
Copyright 2020 The Magma Authors.

This source code is licensed under the BSD-style license found in the
LICENSE file in the root directory of this source tree.

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
//
syntax = "proto3";

package magma.migrations;
option go_package = "magma/orc8r/cloud/go/tools/migrations/m001_config_service/migration";

// Container message type for namespaced network and gateway configs.
message Config {
    // Namespaced map of serialized configs
    map<string, bytes> configs_by_key = 1;
}
